python/test-data/testTypesSet4.err
Traceback (most recent call last):
  File "test-data/testTypesSet4.py", line 11, in <module>
    foo(set([func]))  # error
  File "test-data/testTypesSet4.py", line 7, in foo
    res.append(f())
WyppTypeError: got value of wrong type
given:    42
expected: value of type str

context: foo(l: set[Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesSet4.py:3
caused by: test-data/testTypesSet4.py:10
  | func = lambda: 42
caused by: test-data/testTypesSet4.py:11
  | foo(set([func]))  # error
